@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -13,63 +14,33 @@
 	<groupId>com.github.bat333</groupId>
 	<artifactId>stockroom</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>stockroom</name>
-	<description>https://www.linkedin.com/in/rafael-alves-oliveira1/</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<name>Stockroom</name>
+	<description>Projeto para gerenciamento de estoque</description>
 
 	<properties>
 		<java.version>21</java.version>
+		<maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
+		<proguard.version>7.3.1</proguard.version>
+		<proguard.maven.plugin.version>2.3.1</proguard.maven.plugin.version>
 	</properties>
 
 	<dependencies>
-		<!-- Thymeleaf como motor de templates -->
+		<!-- Dependências principais -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
-		<!-- Dialeto para layouts com Thymeleaf (opcional) -->
 		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
-			<version>3.2.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -85,38 +56,56 @@
 
 	<build>
 		<plugins>
-			<!-- Spring Boot Plugin -->
+			<!-- Plugin Maven Compiler -->
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
 			<!-- ProGuard Plugin -->
 			<plugin>
-				<groupId>com.github.kstenschke</groupId>
-				<artifactId>maven-proguard-plugin</artifactId>
-				<version>2.5.0</version>
+				<groupId>com.github.wvengen</groupId>
+				<artifactId>proguard-maven-plugin</artifactId>
+				<version>${proguard.maven.plugin.version}</version>
 				<executions>
 					<execution>
-						<phase>package</phase> <!-- Fase do Maven onde o ProGuard será executado -->
-						<goals>
-							<goal>proguard</goal>
-						</goals>
+						<phase>package</phase>
+						<goals><goal>proguard</goal></goals>
 					</execution>
 				</executions>
 				<configuration>
-					<proguardFile>${project.basedir}/proguard-rules.pro</proguardFile> <!-- Caminho para o arquivo de regras do ProGuard -->
+					<proguardVersion>${proguard.version}</proguardVersion>
+					<injar>${project.build.finalName}.jar</injar>
+					<outjar>${project.build.finalName}-obfuscated.jar</outjar>
+					<options>
+						<option>-dontshrink</option>
+						<option>-dontoptimize</option>
+						<option>-ignorewarnings</option>
+						<option>-keep class com.github.bat333.stockroom.** { *; }</option>
+					</options>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.guardsquare</groupId>
+						<artifactId>proguard-base</artifactId>
+						<version>${proguard.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+			<!-- Spring Boot Plugin -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
